# aipa

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/hooks/: git-commit.sh
.claude/mcp/: github.json
.github/workflows/: ci.yml  deploy.yml  docs.yml  evals.yml  pr-review.yml
docs/: ARCHITECTURE.md  BRIEF.md  CI_CD.md  DEPLOYMENT.md  PLAN.md  TESTING.md
docs/site/: Gemfile  _config.yml  index.html
docs/site/_docs/: agents.md  architecture.md  customization.md  deployment.md  getting-started.md  mcp-servers.md  skills.md  troubleshooting.md
docs/site/_layouts/: doc.html
server/: __init__.py  config.py  main.py
server/handlers/: auth.py  chat.py  files.py  sessions.py  voice.py
server/models/: requests.py  sessions.py
server/services/: auth.py  claude_code_llm.py  session_namer.py  sessions.py  voice_agent.py
server/templates/: base.html  chat.html  files.html  login.html
terraform/: api_gateway.tf  backup.tf  dynamodb.tf  ecs.tf  lambda_wakeup.tf  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  pytest.ini  test_auth.py  test_mobile.py  test_voice_ui.py
tests/evals/: __init__.py  conftest.py  test_agent.py  test_agent_basics.py  test_agent_evals.py  test_agent_skills.py  test_conversations.py
tests/evals/judge/: __init__.py  metrics.py  ollama_judge.py
tests/evals/test_skills/: __init__.py  test_document_generation.py  test_script_runner.py  test_time_lookup.py  test_weather.py  test_youtube_summarizer.py
tests/unit/: test_auth.py  test_files.py
tests/unit/skills/: __init__.py  test_document_generation.py  test_file_analysis.py  test_script_executor.py  test_time_utils.py  test_weather_format.py  test_youtube_api.py
workspace/: .mcp.json
workspace/.claude/: CLAUDE.md  aipa-config.json
workspace/.claude/agents/: assistant.md  automation-specialist.md  content-analyst.md  developer.md  document-creator.md  quality-reviewer.md  researcher.md  self-improver.md  task-manager.md  writer.md
workspace/.claude/commands/: draft.md  meeting.md  research.md  summarize.md  task.md  today.md
workspace/.claude/context/history/: .gitkeep
workspace/.claude/context/learnings/: .gitkeep
workspace/.claude/context/philosophy/: approaches.md  beliefs.md  principles.md
workspace/.claude/context/preferences/: communication-style.md  owner.md
workspace/.claude/context/projects/: .gitkeep
workspace/.claude/hooks/: backup-context.sh  git-commit.sh  restart.sh  skill-selector.sh
workspace/.claude/mcp/: notion.json  voicemode.json
workspace/.claude/skills/agent-creator/: SKILL.md
workspace/.claude/skills/aws-budget/: SKILL.md
workspace/.claude/skills/brainstorming/: SKILL.md
workspace/.claude/skills/browser-automation/: SKILL.md
workspace/.claude/skills/claim-analyzer/: SKILL.md
workspace/.claude/skills/claim-extractor/: SKILL.md
workspace/.claude/skills/code-assistant/: SKILL.md
workspace/.claude/skills/competitive-analysis/: SKILL.md
workspace/.claude/skills/content-summarizer/: SKILL.md
workspace/.claude/skills/deep-research/: SKILL.md
workspace/.claude/skills/generate-docx/: SKILL.md
workspace/.claude/skills/generate-pptx/: SKILL.md
workspace/.claude/skills/generate-xlsx/: SKILL.md
workspace/.claude/skills/github-workflow/: SKILL.md
workspace/.claude/skills/meeting-notes/: SKILL.md
workspace/.claude/skills/notion-tasks/: SKILL.md
workspace/.claude/state/: .gitkeep
(+13 files in other folders)
