[project]
name = "aipa"
version = "0.1.0"
description = "AI Personal Assistant - Blu"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Gareth", email = "gazzwi86@users.noreply.github.com"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    # Templates
    "jinja2>=3.1.0",
    # AWS SDK for DynamoDB sessions
    "boto3>=1.35.0",
    # LiveKit for voice
    "livekit>=0.18.0",
    "livekit-api>=0.8.0",
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-openai>=1.0.0",  # For STT/TTS (local or OpenAI)
    "livekit-plugins-turn-detector>=1.0.0",  # For smarter end-of-utterance detection
    # Note: livekit-plugins-anthropic removed - using Claude Code CLI instead
    # Document generation
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    # YouTube transcripts
    "youtube-transcript-api>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-playwright>=0.5.0",
    "playwright>=1.48.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Security scanning
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    # Type stubs
    "boto3-stubs[dynamodb]>=1.35.0",
    # Agent evaluation with LLM-as-judge
    "deepeval>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends pattern)
]

[tool.mypy]
python_version = "3.12"
# Start with basic checks, not strict
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
# Allow some flexibility for FastAPI and third-party libs
disallow_untyped_decorators = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "server.services.voice_agent",
    "server.services.claude_code_llm",
]
# LiveKit has incomplete type stubs - ignore most errors
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "server.services.sessions",
    "server.handlers.*",
    "server.main",
]
# DynamoDB and FastAPI have dynamic types
disable_error_code = ["arg-type", "union-attr", "index", "call-overload", "return-value", "no-untyped-def", "no-untyped-call", "type-arg", "operator", "assignment", "var-annotated"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = [
    "B101",  # Assert used - ok in tests
    "B104",  # Binding to all interfaces - intentional for server
    "B110",  # Try/except pass - ok for optional features
    "B112",  # Try/except continue - ok for file iteration
    "B608",  # False positive on f-strings in HTML (not SQL)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: marks tests as end-to-end (requires running server)",
    "eval: marks tests as agent evaluations (requires running agent)",
    "integration: marks tests as integration tests (requires external services)",
    "slow: marks tests as slow-running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Default to unit tests only (use -m e2e or --e2e for e2e tests)
addopts = "--ignore=tests/e2e"
